--- a/products/templates/paginacion_products.html
+++ b/products/templates/paginacion_products.html
@@ -48,8 +48,8 @@
 }
 
 .pagination-item.active {
-  background-color: #00ffd5;
-  color: #1e1e2f; 
+  background-color: #7c3aed;
+  color: white; 
   font-weight: 600;
   cursor: default;
 }
