--- a/products/templates/productos_categorias_marcas.html
+++ b/products/templates/productos_categorias_marcas.html
@@ -7,7 +7,7 @@
 
 <div class="search-container">
     <div class="search-bar">
-        {% include 'search.html' %} <p>okla</p>
+        {% include 'search.html' %}
     </div>
 </div>
 
