--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
 <section id="categories" class="container our-categories-container section-shadow geometric-pattern">
     <div class="text-center">
-        <h3 class="section-title-enhanced" style="color: #17F0D2;">Productos Destacados</h3>
+        <h3 class="section-title-enhanced">Productos Destacados</h3>
     </div>
 
     <div class="container-our-categories">
@@ -53,7 +53,7 @@
 
 <section class="container featured-products section-shadow section-fade-in" style="padding-top: 1%;">
     <div class="text-center">
-        <h3 class="title-featured section-title-enhanced" style="color: #17F0D2;">Nuestras Categorias</h3>
+        <h3 class="title-featured section-title-enhanced">Nuestras Categorias</h3>
     </div>
 
     <div class="container-featured-products">
