--- a/products/templates/search.html
+++ b/products/templates/search.html
@@ -2,7 +2,7 @@
     <div class="input-group" style="display: flex; justify-content: center; margin-top: 20px; width: 800px;">
         <input type="text" name="searchQ" class="form-control" placeholder="Buscar productos..." aria-label="Buscar productos..." value="{{ query }}"> 
         <div class="input-group-append">
-            <button type="submit" class="btn" style="background-color: #17F0D2; border-radius: 0 2rem 2rem 0;">
+            <button type="submit" class="btn" style="background-color: #7c3aed; border-radius: 0 2rem 2rem 0;">
                 <i class="bi bi-search" style="font-size: 25px;"></i>
             </button>
         </div>
