--- a/cart/static/css/cart.css
+++ b/cart/static/css/cart.css
@@ -6,6 +6,8 @@
     display: grid;
     grid-template-columns: 3fr 1fr;
     gap: 2rem;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 .cart-items {
     background-color: #2d2b42;
@@ -24,12 +26,16 @@
     width: 120px;
     height: 120px;
     background-color: white;
-    border-radius: 0.5rem;
+    
     display: flex;
     justify-content: center;
     align-items: center;
     margin-right: 1.5rem;
     flex-shrink: 0;
+}
+
+.item-image img{
+    border-radius: 1rem;
 }
 .item-details {
     flex: 2;
@@ -185,13 +191,103 @@
 .shop-now-button:hover {
     background-color: #09c4a6;
 }
-
-@media (max-width: 768px) {
+/* móviles pequeños */
+@media (max-width: 640px) {
     .cart-container {
+        padding: 0 1rem;
+    }
+    .cart-items {
+        padding: 1rem;
+    }
+    .cart-item {
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem 0;
+    }
+    .item-image {
+        width: 100px;
+        height: 100px;
+    }
+    .item-details {
+        flex: 1;
+        margin-top: 1rem;
+    }
+    .item-name {
+        font-size: 1rem;
+    }
+    .item-price {
+        font-size: 1rem;
+    }
+    .item-quantity {
+        margin-top: 1rem;
+    }
+    .item-actions {
+        flex-direction: column;
+        align-items: flex-end;
+    }
+    .item-total {
+        margin-bottom: 1rem;
+    }
+}
+
+/* móviles grandes y tablets verticales */
+@media (min-width: 641px) and (max-width: 768px) {
+    .cart-container {
+        grid-template-columns: 1fr;
+    }
+    .item-image {
+        width: 100px;
+        height: 100px;
+    }
+    .item-details {
+        margin-left: 1rem;
+        margin-top: 1rem;
+    }
+    .item-price {
+        font-size: 1rem;
+    }
+    .item-quantity input {
+        width: 40px;
+    }
+    .item-actions {
+        display: flex;
+        justify-content: space-between;
+    }
+    .summary-total {
+        font-size: 1.1rem;
+    }
+}
+
+/* tablets horizontales y laptops pequeñas */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .cart-container {
+        grid-template-columns: 2fr 1fr;
+    }
+    .item-image {
+        width: 100px;
+        height: 100px;
+    }
+    .item-quantity input {
+        width: 50px;
+    }
+}
+
+/* escritorio y pantallas grandes */
+@media (min-width: 1025px) {
+    .cart-container {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 768px) {
+     .cart-container {
         grid-template-columns: 1fr;
     }
     .item-image {
         width: 80px;
         height: 80px;
     }
+
 }
+
