--- a/products/templates/productos_categorias_marcas.html
+++ b/products/templates/productos_categorias_marcas.html
@@ -12,7 +12,7 @@
 </div>
 
 
-<div class="container-main" style="display: flex; flex-direction: row;">
+<div class="container-main">
     <div class="filters">
         <h4 class="filter-title">Filtros</h4>
         <hr style=" color: white;">
@@ -81,7 +81,7 @@
         </div>
     
     </div>
-    <div style="display: flex; flex-direction: column; justify-content: space-between;">
+    <div class="contenedor-producto-paginador">
         <div class="product-container">
             {% for product in productos %}
             <div class="product-card">
