--- a/products/templates/search.html
+++ b/products/templates/search.html
@@ -1,5 +1,5 @@
 <form action="{% url 'search_product' %}" method="GET">
-    <div class="input-group" style="display: flex; justify-content: center; margin-top: 20px; width: 800px;">
+    <div class="input-group">
         <input type="text" name="searchQ" class="form-control" placeholder="Buscar productos..." aria-label="Buscar productos..." value="{{ query }}"> 
         <div class="input-group-append">
             <button type="submit" class="btn" style="background-color: #7c3aed; border-radius: 0 2rem 2rem 0;">
