--- a/products/templates/list_products.html
+++ b/products/templates/list_products.html
@@ -5,34 +5,40 @@
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/list_products.css' %}">
 
+<style>
+
+</style>
+
 <div class="search-container">
     <div class="search-bar">
         {% include 'search.html' %}
     </div>
 </div>
 
-{% if query %}
+
+{% if query  %}
     {% if has_results %}
-        <h2 style="color: white; text-align: center;">Resultado de búsqueda para: {{query | title }}</h2>
-        <div class="container-main">
+        <h2 style="color: white; text-align: center;">Resultado de búsqueda  para: {{query | title }}</h2>
+        <div class="container-main" >
             <div class="filters">
                 <h4 class="filter-title">Filtros</h4>
-                <hr style="color: white;">
+                <hr style=" color: white;">
                 <div class="filter-section">
-                    <h6>Filtrar por categoría</h6>
+                    <h6>Filtrar por categoria</h6>
                     {% for categoys in categorias %}
                     <div class="filter-option">
                         <a href="{% url 'categorias_marcas_filtro' 'categoria' categoys.id %}" class="filter-label">
                         {{categoys.name | title }}  <span class="filter-badge">{{categoys.count }}</span>
-                        </a>
+                        </a> 
                     </div>
-                    {% endfor %}
                     
+                    {% endfor %}
+
                     <h6>Filtrar por marcas</h6>
                     {% for brand in marcas %}
                     <div class="filter-option">
                         <a href="{% url 'categorias_marcas_filtro' 'marca' brand.id %}" class="filter-label">
-                        {{brand.name | title }} <span class="filter-badge">{{brand.count}}</span>
+                        {{brand.name | title }} <span class="filter-badge">{{brand.count  }}</span>
                         </a>
                     </div>
                     {% endfor %}
@@ -45,7 +51,7 @@
                 <div class="filter-section orderby">
                     <form method="get" action="{% url 'search_product' %}">
                         <input type="hidden" name="searchQ" value="{{ query }}">
-                        <select name="price_order" id="price_order">
+                        <select name="price_order" id="price_order" style="margin-bottom: 15px;">
                             <option value="recomendado" disabled {% if request.GET.price_order == 'recomendado' %}selected{% endif %}>Ordenar por</option>
                             <option value="recomendado" {% if request.GET.price_order == 'recomendado' %}selected{% endif %}>Recomendados</option>
                             <option value="asc" {% if request.GET.price_order == 'asc' %}selected{% endif %}>Precio: Menor a mayor</option>
@@ -55,6 +61,7 @@
                     </form>
                 </div>
 
+                    
                 <div class="filter-section rangeprice">
                     <form method="GET">
                         <div class="range-slider">
@@ -63,128 +70,195 @@
                             <div class="range">
                                 <input type="range" name="min_price" class="min-input" value="{{ current_min_price }}" min="{{ min_price_all }}" max="{{ max_price_all }}" />
                                 <input type="range" name="max_price" class="max-input" value="{{ current_max_price }}" min="{{ min_price_all }}" max="{{ max_price_all }}" />
-                                <div class="slider">
-                                    <div class="progress"></div>
-                                </div>
+                            <div class="slider">
+                                <div class="progress"></div>
+                            </div>
                             </div>
 
                             <div class="price-labels">
-                                <label class="min-label" for="min-input">${{ current_min_price }}</label>
-                                <label class="max-label" for="max-input">${{ current_max_price }}</label>
+                            <label class="min-label" for="min-input">${{ current_min_price}}</label>
+                            <label class="max-label" for="max-input">${{ current_max_price }}</label>
                             </div>
                         </div>
                         <button type="submit">Filtrar</button>
                     </form>
                 </div>
             </div>
-
-            <div class="product-container">
-                {% for product in product_list %}
-                    {% if product.main_image and product.stock > 0 %}
-                    <div class="product-card">
-                        <div class="product-image">
-                            {% if product.main_image %}
-                            <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px;">
-                            {% else %}
-                            <p>No image available</p>
-                            {% endif %}
+            <div class="contenedor-producto-paginador">
+                <div class="product-container">
+                    {% for product in product_list %}
+                        {% if product.main_image and product.stock > 0 %}
+                        <div class="product-card">
+                            <div class="product-image">
+                                {% if product.main_image %}
+                                <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px;">
+                                {% else %}
+                                <p>No image available</p>
+                                {% endif %}
+                            </div>
+                            <div class="product-info">
+                                <div class="product-brand">{{ product.category | title }}</div>
+                                <div class="product-brand">{{ product.brand | title }}</div>
+                                <div class="product-name">{{ product.name | title }}</div>
+                                <div class="product-price">{{ product.price | format_price }}</div>
+                                <!-- <button class="add-to-cart">Agregar al carrito</button> -->
+                                <a class="btn add-to-cart-a" href="{% url 'detail_product' product.slug %}">Ir al producto</a>
+                            </div>
                         </div>
-                        <div class="product-info">
-                            <div class="product-brand">{{ product.category | title }}</div>
-                            <div class="product-brand">{{ product.brand | title }}</div>
-                            <div class="product-name">{{ product.name | title }}</div>
-                            <div class="product-price">{{ product.price | format_price }}</div>
-                            <a class="btn add-to-cart-a" href="{% url 'detail_product' product.slug %}">Ir al producto</a>
-                        </div>
-                    </div>
-                    {% endif %}
-                {% endfor %}
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                {% include 'paginacion_products.html' %}
             </div>
-
-            {% include 'paginacion_products.html' %}
         </div>
     {% else %}
         <h2 style="color: white; text-align: center;">No hay resultados para: {{query | title }}</h2>
-    {% endif %}
-{% else %}
-    <!-- Filtro y productos cuando no hay búsqueda -->
-    <div class="container-main">
-        <div class="filters">
-            <h4 class="filter-title">Filtros</h4>
-            <hr style="color: white;">
-            <div class="filter-section">
-                <h6>Filtrar por categoría</h6>
-                {% for categoys in categorias %}
-                <div class="filter-option">
-                    <a href="{% url 'categorias_marcas_filtro' 'categoria' categoys.id %}" class="filter-label">
-                    {{categoys.name | title }}  <span class="filter-badge">{{categoys.count}}</span>
-                    </a>
-                </div>
-                {% endfor %}
-
-                <h6>Filtrar por marcas</h6>
-                {% for brand in marcas %}
-                <div class="filter-option">
-                    <a href="{% url 'categorias_marcas_filtro' 'marca' brand.id %}" class="filter-label">
-                    {{brand.name | title }} <span class="filter-badge">{{brand.count}}</span>
-                    </a>
-                </div>
-                {% endfor %}
-            </div>
-
-            <div class="filter-section orderby">
-                <form method="get" action="{% url 'view_products' %}">
-                    <select name="price_order" id="price_order">
-                        <option value="ordenpor" disabled selected>Ordenar por</option>
-                        <option value="recomendado" {% if request.GET.price_order == 'recomendado' %}selected{% endif %}>Recomendados</option>
-                        <option value="asc" {% if request.GET.price_order == 'asc' %}selected{% endif %}>Precio: Menor a mayor</option>
-                        <option value="desc" {% if request.GET.price_order == 'desc' %}selected{% endif %}>Precio: Mayor a menor</option>
-                    </select>
-                    <button type="submit">Filtrar</button>
-                </form>
-            </div>
-
-            <div class="filter-section rangeprice">
-                <form method="GET">
-                    <div class="range-slider">
-                        <input type="number" name="min_price" class="min-price" value="{{ current_min_price }}" min="{{ min_price_all }}" max="{{ max_price_all }}" />
-                        <input type="number" name="max_price" class="max-price" value="{{ current_max_price }}" min="{{ min_price_all }}" max="{{ max_price_all }}" />
-                        <div class="range">
-                            <input type="range" name="min_price" class="min-input" value="{{ current_min_price }}" min="{{ min_price_all }}" max="{{ max_price_all }}" />
-                            <input type="range" name="max_price" class="max-input" value="{{ current_max_price }}" min="{{ min_price_all }}" max="{{ max_price_all }}" />
-                            <div class="slider">
-                                <div class="progress"></div>
-                            </div>
-                        </div>
+        <div class="container-main">
+            <div class="filters">
+                <h4 class="filter-title">Filtros</h4>
+                <hr style=" color: white;">
+                <div class="filter-section">
+                    <h6>Filtrar por categoria</h6>
+                    {% for categoys in categorias %}
+                    <div class="filter-option">
+                        <a href="{% url 'categorias_marcas_filtro' 'categoria' categoys.id %}" class="filter-label">
+                        {{categoys.name | title }}  <span class="filter-badge">{{categoys.count }}</span>
+                        </a> 
                     </div>
-                    <button type="submit">Filtrar</button>
-                </form>
+                    
+                    {% endfor %}
+
+                    <h6>Filtrar por marcas</h6>
+                    {% for brand in marcas %}
+                    <div class="filter-option">
+                        <a href="{% url 'categorias_marcas_filtro' 'marca' brand.id %}" class="filter-label">
+                        {{brand.name | title }} <span class="filter-badge">{{brand.count  }}</span>
+                        </a>
+                    </div>
+                    {% endfor %}
+                </div>
+
+                <div style="margin: 5px 0;">
+                    <a href="{% url 'view_products' %}" class="filter-label">Ver todos los productos</a>
+                </div>
+
+                <div class="filter-section orderby">
+                    <form method="get" action="{% url 'view_products' %}">
+                        <div style="display: flex; justify-content: center; align-items: center;">
+                            <select name="price_order" id="price_order" style="margin-bottom: 15px;">
+                                <option value="ordenpor"disabled  style="color: #0BEAD0" selected>Ordenar por</option>
+                                <option value="recomendado" {% if request.GET.price_order == 'recomendado' %}selected{% endif %}>Recomendados</option>
+                                <option value="asc" {% if request.GET.price_order == 'asc' %}selected{% endif %}>Precio: Menor a mayor</option>
+                                <option value="desc" {% if request.GET.price_order == 'desc' %}selected{% endif %}>Precio: Mayor a menor</option>
+                            </select>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-list-filter-icon lucide-list-filter"><path d="M3 6h18"/><path d="M7 12h10"/><path d="M10 18h4"/></svg>
+                        </div>
+                        <button type="submit">Filtrar</button>
+                    </form>
+                </div>
             </div>
         </div>
+    {% endif %}
+{% else %}
 
-        <div class="product-container">
-            {% for product in product_list %}
-            <div class="product-card">
-                <div class="product-image">
-                    {% if product.main_image %}
-                    <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px;">
-                    {% else %}
-                    <p>No image available</p>
-                    {% endif %}
-                </div>
-                <div class="product-info">
-                    <div class="product-brand">{{ product.category | title }}</div>
-                    <div class="product-brand">{{ product.brand | title }}</div>
-                    <div class="product-name">{{ product.name | title }}</div>
-                    <div class="product-price">{{ product.price | format_price }}</div>
-                    <a class="btn add-to-cart-a" href="{% url 'detail_product' product.slug %}">Ir al producto</a>
-                </div>
+<div class="container-main">
+    <div class="filters">
+        <h4 class="filter-title">Filtros</h4>
+        <hr style=" color: white;">
+        <div class="filter-section">
+            <h6>Filtro por categoria</h6>
+            {% for categoys in categorias %}
+            <div class="filter-option">
+                <a href="{% url 'categorias_marcas_filtro' 'categoria' categoys.id %}" class="filter-label">
+                {{categoys.name | title }}  <span class="filter-badge">{{categoys.count  }}</span>
+                </a> 
             </div>
+            
+            {% endfor %}
+
+            <h6>Filtro por marcas</h6>
+            {% for brand in marcas %}
+            <div class="filter-option">
+                <a href="{% url 'categorias_marcas_filtro' 'marca' brand.id %}" class="filter-label">
+                {{brand.name | title }} <span class="filter-badge">{{brand.count  }}</span>
+                </a>
+            </div>
+
             {% endfor %}
         </div>
 
+        <div class="filter-section orderby">
+            <form method="get" action="{% url 'view_products' %}">
+                <div style="display: flex; justify-content: center; align-items: center;">
+                    <select name="price_order" id="price_order" style="margin-bottom: 15px;">
+                        <option value="ordenpor"disabled  style="color: white" selected>Ordenar por</option>
+                        <option value="recomendado" {% if request.GET.price_order == 'recomendado' %}selected{% endif %}>
+                            Recomendados</option>
+                        <option value="asc" {% if request.GET.price_order == 'asc' %}selected{% endif %}>Precio: Menor a mayor
+                        </option>
+                        <option value="desc" {% if request.GET.price_order == 'desc' %}selected{% endif %}>Precio: Mayor a
+                            menor</option>
+                    </select>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-list-filter-icon lucide-list-filter"><path d="M3 6h18"/><path d="M7 12h10"/><path d="M10 18h4"/></svg>
+                </div>
+                <button type="submit">Filtrar</button>
+            </form>
+        </div>
+
+        <div class="filter-section  rangeprice">
+            <form method="GET">
+                <div class="range-slider">
+                    <input type="number" name="min_price" class="min-price" value="{{ current_min_price }}" min="{{ min_price_all }}" max="{{ max_price_all }}" />
+                    <input type="number" name="max_price" class="max-price" value="{{ current_max_price }}" min="{{ min_price_all }}" max="{{ max_price_all }}" />
+                    <div class="range">
+                        <input type="range" name="min_price" class="min-input" value="{{ current_min_price }}" min="{{ min_price_all }}" max="{{ max_price_all }}" />
+                        <input type="range" name="max_price" class="max-input" value="{{ current_max_price }}" min="{{ min_price_all }}" max="{{ max_price_all }}" />
+                    <div class="slider">
+                        <div class="progress"></div>
+                    </div>
+                    </div>
+
+                    <div class="price-labels">
+                        <label class="min-label" for="min-input">${{ current_min_price }}</label>
+                        <label class="max-label" for="max-input">${{ current_max_price }}</label>
+                    </div>
+                </div>
+
+                <button type="submit">Filtrar</button>
+            </form>
+        </div>
+
+    </div>
+    <div class="contenedor-producto-paginador">
+        <div class="product-container">
+            {% for product in product_list %}
+                {% if product.main_image and product.stock > 0 %}
+                <div class="product-card">
+                    <div class="product-image">
+                        {% if product.main_image %}
+                        <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px;">
+                        {% else %}
+                        <p>No image available</p>
+                        {% endif %}
+                    </div>
+                    <div class="product-info">
+                        <div class="product-brand">{{ product.category | title}}</div>
+                        <div class="product-brand">{{ product.brand | title }}</div>
+                        <div class="product-name">{{ product.name | title }}</div>
+                        <div class="product-price">{{ product.price | format_price }}</div>
+                        <!-- <button class="add-to-cart">Agregar al carrito</button> -->
+                        <a class="btn add-to-cart-a" href="{% url 'detail_product' product.slug %}">Ir al producto</a>
+                    </div>
+                </div>
+                {% endif %}
+            {% endfor %}
+        </div>
         {% include 'paginacion_products.html' %}
     </div>
+</div>
+
+
+
 {% endif %}
 
 <script src="{% static 'js/list_product.js' %}"></script>
